--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.2.1'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'com.google.firebase:firebase-storage:16.1.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
